--- a/modelo_copin/app/distrib.tex
+++ b/modelo_copin/app/distrib.tex
@@ -5,29 +5,29 @@
 \begin{figure}
   \centering
   \includegraphics[height=0.65\paperheight]{figures/stackoverflow.pdf}
-  \caption[Distribuição das variáveis para o site \emph{StackOverflow}]{Distribuição das variáveis onde foi aplicado o teste \emph{Mann-Whitney-U} para o site \emph{StackOverflow}. Mostramos a distribuição acumulada para as variáveis discretas e a densidade, para as variáveis contínuas. }
+  \caption[Distribuição das variáveis para o site \emph{StackOverflow}]{Distribuição das variáveis onde foi aplicado o teste \emph{Mann-Whitney-U} para o site \emph{StackOverflow}. Mostramos um histograma do log do valor da variável mais um para as variáveis discretas e a gráfico da função de densidade, para as variáveis contínuas. }
 \end{figure}
 
 \begin{figure}
 	\centering
   \includegraphics[height=0.65\paperheight]{figures/superuser.pdf}
- \caption[Distribuição das variáveis para o site \emph{SuperUser}]{Distribuição das variáveis onde foi aplicado o teste \emph{Mann-Whitney-U} para o site \emph{SuperUser}. Mostramos a distribuição acumulada para as variáveis discretas e a densidade, para as variáveis contínuas. }
+ \caption[Distribuição das variáveis para o site \emph{SuperUser}]{Distribuição das variáveis onde foi aplicado o teste \emph{Mann-Whitney-U} para o site \emph{SuperUser}. Mostramos um histograma do log do valor da variável mais um para as variáveis discretas e a gráfico da função de densidade, para as variáveis contínuas. }
 \end{figure}
 
 \begin{figure}
 	\centering
   \includegraphics[height=0.65\paperheight]{figures/serverfault.pdf}
-  \caption[Distribuição das variáveis para o site \emph{ServerFault}]{Distribuição das variáveis onde foi aplicado o teste \emph{Mann-Whitney-U} para o site \emph{ServerFault}. Mostramos a distribuição acumulada para as variáveis discretas e a densidade, para as variáveis contínuas. }
+  \caption[Distribuição das variáveis para o site \emph{ServerFault}]{Distribuição das variáveis onde foi aplicado o teste \emph{Mann-Whitney-U} para o site \emph{ServerFault}. Mostramos um histograma do log do valor da variável mais um para as variáveis discretas e a gráfico da função de densidade, para as variáveis contínuas. }
 \end{figure}
 
 \begin{figure}
 	\centering
   \includegraphics[height=0.65\paperheight]{figures/math.pdf}
-  \caption[Distribuição das variáveis para o site \emph{Mathematics}]{Distribuição das variáveis onde foi aplicado o teste \emph{Mann-Whitney-U} para o site \emph{Mathematics}. Mostramos a distribuição acumulada para as variáveis discretas e a densidade, para as variáveis contínuas. }
+  \caption[Distribuição das variáveis para o site \emph{Mathematics}]{Distribuição das variáveis onde foi aplicado o teste \emph{Mann-Whitney-U} para o site \emph{Mathematics}. Mostramos um histograma do log do valor da variável mais um para as variáveis discretas e a gráfico da função de densidade, para as variáveis contínuas. }
 \end{figure}
 
 \begin{figure}
   \centering
   \includegraphics[height=0.65\paperheight]{figures/programmers.pdf}
-  \caption[Distribuição das variáveis para o site \emph{Programmers}]{Distribuição das variáveis onde foi aplicado o teste \emph{Mann-Whitney-U} para o site \emph{Programmers}. Mostramos a distribuição acumulada para as variáveis discretas e a densidade, para as variáveis contínuas. }
+  \caption[Distribuição das variáveis para o site \emph{Programmers}]{Distribuição das variáveis onde foi aplicado o teste \emph{Mann-Whitney-U} para o site \emph{Programmers}. Mostramos um histograma do log do valor da variável mais um para as variáveis discretas e a gráfico da função de densidade, para as variáveis contínuas. }
 \end{figure}
