--- a/modelo_copin/discussao.tex
+++ b/modelo_copin/discussao.tex
@@ -2,15 +2,19 @@
 \chapter{Discussão}
 \label{ch:discussao}
 
+Neste capítulo iremos comentar os resultados obtidos no nosso experimento e associá-los à literatura relacionada ao estudo aqui descrito. Dividimos nossos pensamentos entre as semelhanças e diferenças encontradas e, apesar da importância do primeiro tópico, focamos nas diferenças por estas serem mais controversas.
+
+\section{As semelhanças}
+
 Nossa expectativa ao observar contribuições individuais de usuários de diferentes gêneros era que mulheres, por serem uma minoria, iriam participar menos destes sites, assim como na \emph{Wikipedia}~\cite{antin2011gender} e comunidades \emph{FOSS}~\cite{rustad2011suck}. Contudo, o que encontramos não foram diferenças, mas uma grande equivalência entre o comportamento de homens e mulheres nos sites estudados. 
 
 No geral, saber que mulheres contribuem de maneira similar aos homens na maioria dos sites aponta que uma mulher que se cadastrar em um site aleatório do \emph{StackExchange} provavelmente irá encontrar um ambiente que não a estimule a contribuir menos ou menos frequentemente que os homens. Estes resultados aparentam inesperados visto a pequena proporção de mulheres na maioria dos sites.
 
 \section{As diferenças}
 
-Tendo em mente todo o estereótipo em \emph{STEM} que mulheres são enquadradas, esperávamos que sua baixa representatividade também representaria baixa contribuição. Ademais, esperávamos que o estereótipo de mulheres em tecnologia~\cite{hyde1990gender} e aquele em que mulheres não possuem um taleto inato para ciência~\cite{leslie2015expectations} fosse influenciar na opinião que os outros usuários teriam das suas colegas, fazendo com que mulheres recebessem feedback negativo nas suas contribuições, indiscriminadamente, levando o conteúdo das mulheres a serem classificados com menor qualidade pela comunidade. Sem esquecer de que outros estudos já tinham identificado o conteúdo vindo de mulheres como de qualidade inferior comparado ao de homens, tanto em tarefas de matemática~\cite{campbell1986effects} quanto em comunidades online~\cite{collier2012conflict}.
+Tendo em mente todo o estereótipo em \emph{STEM} que mulheres são enquadradas, esperávamos que sua baixa representatividade também representaria baixa contribuição. Ademais, esperávamos que o estereótipo de mulheres em tecnologia~\cite{hyde1990gender} e aquele em que mulheres não possuem um taleto inato para ciência~\cite{leslie2015expectations} fosse influenciar na opinião que os outros usuários teriam das suas colegas, fazendo com que mulheres recebessem \emph{feedback} negativo nas suas contribuições, indiscriminadamente, levando o conteúdo das mulheres a serem classificados com menor qualidade pela comunidade. Sem esquecer de que outros estudos já tinham identificado o conteúdo vindo de mulheres como de qualidade inferior comparado ao de homens, tanto em tarefas de matemática~\cite{campbell1986effects} quanto em comunidades online~\cite{collier2012conflict}.
 
-Contudo, não é isso que acontece. Na maioria das comunidades, mulheres produzem conteúdo de tão boa qualidade quanto homens, segundo a visão da comunidade. Vemos que estas mulheres contribuem bastante com perguntas e comentários, tendo uma frequência de contribuições muitas vezes maiores que a de homens. 
+Contudo, não é isso que acontece. Na maioria dos sites, mulheres produzem conteúdo de tão boa qualidade quanto homens, segundo a visão da comunidade. Vemos que estas mulheres contribuem bastante com perguntas e comentários, tendo uma frequência de contribuições muitas vezes maiores que a de homens. 
 
 % Por outro lado, apesar de mulheres respondem mais do que homens em várias comunidades, quando observamos apenas comunidades relacionadas a \emph{STEM} esta proporção é invertida. Inclusive, mulheres respondem menos nos quatro maiores e mais antigos sites da plataforma: StackOverflow, SuperUser, SeverFault e Mathematics. Mais ainda, em praticamente todas as comunidades que observamos diferença estatística quanto ao tempo de vida, homens passavam mais tempo na comunidade.
 
@@ -26,7 +30,13 @@ Apesar de não ser relacionada com sua real performance, a percepção que uma p
 
 % Uma justificativa para mulheres responderem menos em comunidades de \emph{STEM} pode ser a de que respostas podem ser consideradas mais competitivas do que perguntas. Afinal, todas as respostas passam por um "processo seletivo" para ser a melhor resposta de uma determinada pergunta, o que não acontece com perguntas nem comentários. Já se sabe que mulheres não se dão bem em ambientes competitivos, principalmente quando precisam competir com homens~\cite{gneezy2003performance}, e tendem a evitá-los~\cite{niederle2005women,croson2009gender}. Além de que, demonstrar conhecimento em um assunto desta área pode exigir uma auto-confiança no campo que mulheres não têm.
 
-Se olharmos para comunidades de áreas de \emph{STEM} que são conhecidas por terem mais mulheres, observamos que o resultado é similar aos de comunidades não relacionadas à \emph{STEM}. Tomando como exemplo \emph{UX} (\textit{user experience}) mulheres respondem mais nesta comunidade, o que pode ser uma demonstração de auto confiança no seu conhecimento no assunto. Mais ainda, \emph{UX} não é considerada uma disciplina que necessita de um conhecimento inato para ter sucesso na área, sendo este mais um motivo para mulheres não se inibirem em participar desta comunidade de todas as formas possíveis. 
+Se olharmos para comunidades de áreas de \emph{STEM} que são conhecidas por terem mais mulheres, observamos que o resultado é similar aos de comunidades não relacionadas à \emph{STEM}. Tomando como exemplo a comunidade \emph{UX} (\textit{user experience}) cujas variáveis podem ser observadas na Figura~\ref{fig:ux}, mulheres respondem mais nesta comunidade, o que pode ser uma demonstração de auto confiança no seu conhecimento no assunto. Mais ainda, \emph{UX} não é considerada uma disciplina que necessita de um conhecimento inato para ter sucesso na área, sendo este mais um motivo para mulheres não se inibirem em participar desta comunidade de todas as formas possíveis. 
+
+\begin{figure}
+  \centering
+  \includegraphics[height=0.65\paperheight]{figures/ux.pdf}
+  \caption[Distribuição das variáveis para o site \emph{User Experience}]{Distribuição das variáveis para o site \emph{StackOverflow}. Mostramos um histograma do log do valor da variável mais um para as variáveis discretas e a gráfico da função de densidade, para as variáveis contínuas. }~\label{fig:ux}
+\end{figure}
 
 Ver que mulheres têm aumentado sua proporção de contribuições ao longo do tempo, principalmente em comunidades sobre assuntos relacionados à \emph{STEM}, nos dá uma esperança que a barreira que existe para que mulheres entrem e contribuam para estas comunidades esteja diminuindo. Já que outras comunidades, como as comunidades \emph{FOSS}~\cite{powell2010gender}, mulheres que já estão envolvidas tendem a continuar fazendo parte dela. Uma maneira de aumentar a autoconfiança destas mulheres quanto ao seu conhecimento também é essencial para aumentar estas proporções, já que elas mesmas consideram ter autoconfiança algo essencial para se manter em comunidades que elas são maioria~\cite{powell2010gender}.
 
